Proyecto2/k8s/rust/rust-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
  namespace: weather-tweets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: sergiolarios/rust-api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
