Proyecto2/k8s/rust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-service
  namespace: so1_proyecto2
spec:
  selector:
    app: rust-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
