Proyecto2/k8s/rust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-ingress
  namespace: so1_proyecto2
spec:
  rules:
    - host: rust-api.local
      http:
        paths:
          - path: /input
            pathType: Prefix
            backend:
              service:
                name: rust-api-service
                port:
                  number: 80
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: rust-api-service
                port:
                  number: 80
